Requirement box container text vertical alignment fixed to center

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -487,6 +487,8 @@ article:not(:first-of-type)
   .requirements-box
     width: calc(100% - 8px)
     max-width: initial
+    .requirements-box-container
+      align-items: center
   .form-container
     border: none
     border-radius: 0
